minor changes to path link to picture

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 								</header>
 								<a href="#work" class="jumplink pic">
 									<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
-									<img src="images/me.jpg" alt="Picture of Jennifer with pretty mountains behind her." />
+									<img src="images/me.jpg" alt="Picture of Jennifer with pretty mountains behind her.">
 								</a>
 							</article>
 
