Update CV preview link

--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
 						<article id="cv" class="panel">
 							<span class="cv-stuff">
 								<h2>📄 CV</h2>
-								<a href="images/YunChenHung_Resume.pdf" target="_blank">
-									<img src="images/YunChenHung_Resume.pdf" alt="My Resume" class="preview-cv">
+								<a href="./images/YunChenHung_Resume.pdf" target="_blank">
+									<img src="./images/YunChenHung_Resume.pdf" alt="My Resume" class="preview-cv">
 								</a>
 							</span>
 							<span class="cv">
