push updates (resume, transcript, projects +2)

--- a/index.html
+++ b/index.html
@@ -65,21 +65,38 @@
 								</p>
 								<div class="row">
 									<div class="col-4 col-6-medium col-12-small">
-										<a href="https://aparaselli.github.io/Food.com-Rating-Analysis/" class="image fit" target="_blank">
-											<img src="images/Project 3.png" alt="Project 3 preview">
+										<a href="https://aparaselli.github.io/Very-Naive-Bayes/" class="image fit" target="_blank">
+											<img src="images/bayes.png" alt="Data Visualization preview">
 										</a>
-										<p>Analyzing correlation between average rating of recipes from Food.com and calories</p>
+										<h10>Data Visualization:</h10>
+										<p>Used Svelte and D3 to create a storytelling website explaining the Naive Bayes Classifier</p>
+									</div>
+									<div class="col-4 col-6-medium col-12-small">
+										<a href="https://github.com/lukelin15/DSC148-Proj" class="image fit" target="_blank">
+											<img src="images/road_accident.png" alt="road accident project preview">
+										</a>
+										<h10>Data Mining:</h10>
+										<p>Created a Random Forest Classifer to predict road accident severity in the UK</p>
 									</div>
 									<div class="col-4 col-6-medium col-12-small">
 										<a href="https://aparaselli.github.io/Food.com-Minutes-Prediction/" class="image fit" target="_blank">
 											<img src="images/Project 5.png" alt="Project 5 preview">
 										</a>
-										<p>Built prediction model to estimate minutes per Food.com recipe with calories, tags, number of ingredients and steps</p>
+										<h10>Machine Learning:</h10>
+										<p>Built a Decision Tree model to estimate minutes per Food.com recipe with calories, tags, number of ingredients and steps</p>
+									</div>
+									<div class="col-4 col-6-medium col-12-small">
+										<a href="https://aparaselli.github.io/Food.com-Rating-Analysis/" class="image fit" target="_blank">
+											<img src="images/Project 3.png" alt="Project 3 preview">
+										</a>
+										<h10>Hypothesis Testing:</h10>
+										<p>Analyzing correlation between average rating of recipes from Food.com and calories</p>
 									</div>
 									<div class="col-4 col-6-medium col-12-small">
 										<a href="https://docs.google.com/presentation/d/1msN2TWsS0wKWZpW3tlmzizUitxM9h3F7nqK94ahCwMQ/edit?usp=sharing" class="image fit" target="_blank">
 											<img src="images/app_design.png" alt="App Design preview">
 										</a>
+										<h10>Front-End:</h10>
 										<p>Designed a produce analysis app for grocery shoppers to quickly identify the freshest produce</p>
 									</div>
 								</div>
