change names of subdomain

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 
 				<!-- Nav -->
 					<nav id="nav">
-						<a href="#" class="icon solid fa-home"><span>About Me</span></a>
-						<a href="#work" class="icon solid fa-folder"><span>Projects</span></a>
-						<a href="#cv" class="icon solid fa-file"><span>CV</span></a>
+						<a href="" class="icon solid fa-home"><span>About Me</span></a>
+						<a href="work" class="icon solid fa-folder"><span>Projects</span></a>
+						<a href="cv" class="icon solid fa-file"><span>CV</span></a>
 						<a href="https://www.linkedin.com/in/yun-chen-hung-767152257/" class="icon brands fa-linkedin" target="_blank"><span>LinkedIn</span></a>
 					</nav>
 
